{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 267,
  "lineage": "fbd710ef-c059-6ceb-9ffb-fcfc45990827",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eddb4a4e7d846d6f",
            "arn": "arn:aws:ec2:eu-central-1:502863813996:instance/i-06c7370142a55e8c6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2Tdev702Role",
            "id": "i-06c7370142a55e8c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2a05:d014:1926:1900:8213:7565:9d13:6a77"
            ],
            "key_name": "tdev700",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec996ae5c21b5f31",
            "private_dns": "ip-172-30-0-242.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.30.0.242",
            "public_dns": "ec2-3-68-160-112.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.68.160.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4593a3f96521f93",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0842beca7f92e2905",
            "tags": {
              "Name": "bastion tdev700",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "bastion tdev700",
              "Project": "tdev700"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0060ffdd71ac2fbad"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.api",
            "module.security.aws_security_group.auth",
            "module.security.aws_security_group.frontend",
            "module.security.aws_security_group.load_balancer",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.vpc",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:loadbalancer/app/lb-tdev700/fb3fa1931cc95dea",
            "arn_suffix": "app/lb-tdev700/fb3fa1931cc95dea",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-tdev700-302380393.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:loadbalancer/app/lb-tdev700/fb3fa1931cc95dea",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "lb-tdev700",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0406cdda50a395ea7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-062113502435c5016"
              },
              {
                "subnet_id": "subnet-0842beca7f92e2905"
              },
              {
                "subnet_id": "subnet-0b10baead6e902a37"
              }
            ],
            "subnets": [
              "subnet-062113502435c5016",
              "subnet-0842beca7f92e2905",
              "subnet-0b10baead6e902a37"
            ],
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            },
            "vpc_id": "vpc-0a74a7c1f46d92c59",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security.aws_security_group.api",
            "module.security.aws_security_group.auth",
            "module.security.aws_security_group.frontend",
            "module.security.aws_security_group.load_balancer",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.vpc",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:listener/app/lb-tdev700/fb3fa1931cc95dea/f9437c3aae8aa8c4",
            "certificate_arn": "arn:aws:acm:eu-central-1:502863813996:certificate/1cd8114a-0789-4ac7-b3f9-dc01576cf8ef",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-frontend-tdev700/c278321694ac9a9b",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-frontend-tdev700/c278321694ac9a9b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:listener/app/lb-tdev700/fb3fa1931cc95dea/f9437c3aae8aa8c4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:loadbalancer/app/lb-tdev700/fb3fa1931cc95dea",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.main",
            "module.load_balancer.aws_lb_target_group.frontend",
            "module.security.aws_security_group.api",
            "module.security.aws_security_group.auth",
            "module.security.aws_security_group.frontend",
            "module.security.aws_security_group.load_balancer",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.vpc",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-api-tdev700/c75e89ed783945ac",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:listener-rule/app/lb-tdev700/fb3fa1931cc95dea/f9437c3aae8aa8c4/987c7ac8d5e04ee9",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:listener-rule/app/lb-tdev700/fb3fa1931cc95dea/f9437c3aae8aa8c4/987c7ac8d5e04ee9",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:listener/app/lb-tdev700/fb3fa1931cc95dea/f9437c3aae8aa8c4",
            "priority": 3,
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.main",
            "module.load_balancer.aws_lb_listener.main",
            "module.load_balancer.aws_lb_target_group.api",
            "module.load_balancer.aws_lb_target_group.frontend",
            "module.security.aws_security_group.api",
            "module.security.aws_security_group.auth",
            "module.security.aws_security_group.frontend",
            "module.security.aws_security_group.load_balancer",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.vpc",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-auth-tdev700/a7a19cd66f00cf9d",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:listener-rule/app/lb-tdev700/fb3fa1931cc95dea/f9437c3aae8aa8c4/740c78e779af1cd1",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "auth.*"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:listener-rule/app/lb-tdev700/fb3fa1931cc95dea/f9437c3aae8aa8c4/740c78e779af1cd1",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:listener/app/lb-tdev700/fb3fa1931cc95dea/f9437c3aae8aa8c4",
            "priority": 2,
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.main",
            "module.load_balancer.aws_lb_listener.main",
            "module.load_balancer.aws_lb_target_group.auth",
            "module.load_balancer.aws_lb_target_group.frontend",
            "module.security.aws_security_group.api",
            "module.security.aws_security_group.auth",
            "module.security.aws_security_group.frontend",
            "module.security.aws_security_group.load_balancer",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.vpc",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-api-tdev700/c75e89ed783945ac",
            "arn_suffix": "targetgroup/lb-tg-api-tdev700/c75e89ed783945ac",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-api-tdev700/c75e89ed783945ac",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:502863813996:loadbalancer/app/lb-tdev700/fb3fa1931cc95dea"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-tg-api-tdev700",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-auth-tdev700/a7a19cd66f00cf9d",
            "arn_suffix": "targetgroup/lb-tg-auth-tdev700/a7a19cd66f00cf9d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/auth/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-auth-tdev700/a7a19cd66f00cf9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:502863813996:loadbalancer/app/lb-tdev700/fb3fa1931cc95dea"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-tg-auth-tdev700",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-frontend-tdev700/c278321694ac9a9b",
            "arn_suffix": "targetgroup/lb-tg-frontend-tdev700/c278321694ac9a9b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/sign-in",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:502863813996:targetgroup/lb-tg-frontend-tdev700/c278321694ac9a9b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:502863813996:loadbalancer/app/lb-tdev700/fb3fa1931cc95dea"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-tg-frontend-tdev700",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:security-group/sg-008d7c41d909f35d4",
            "description": "Security group for the api server of tdev700.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008d7c41d909f35d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0406cdda50a395ea7"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_api_tdev700",
            "name_prefix": "",
            "owner_id": "502863813996",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.load_balancer",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:security-group/sg-0fc61ed88f95fc0e6",
            "description": "Security group for the authentication server of tdev700.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc61ed88f95fc0e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0406cdda50a395ea7"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_auth_server_tdev700",
            "name_prefix": "",
            "owner_id": "502863813996",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.load_balancer",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:security-group/sg-0298f3cccc6392c03",
            "description": "Security group for the frontend server of tdev700.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0298f3cccc6392c03",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0406cdda50a395ea7"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_frontend_tdev700",
            "name_prefix": "",
            "owner_id": "502863813996",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.load_balancer",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:security-group/sg-0406cdda50a395ea7",
            "description": "Security group for the load balancer of tdev700.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0406cdda50a395ea7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_load_balancer_tdev700",
            "name_prefix": "",
            "owner_id": "502863813996",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:security-group/sg-0773c51c8fdf1ba71",
            "description": "Security group for the database of tdev700.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0773c51c8fdf1ba71",
            "ingress": [
              {
                "cidr_blocks": [
                  "83.202.113.65/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0060ffdd71ac2fbad"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008d7c41d909f35d4",
                  "sg-0fc61ed88f95fc0e6"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "sg_database_tdev700",
            "name_prefix": "",
            "owner_id": "502863813996",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.api",
            "module.security.aws_security_group.auth",
            "module.security.aws_security_group.load_balancer",
            "module.security.aws_security_group.vpc",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:security-group/sg-0060ffdd71ac2fbad",
            "description": "Security group for the vpc of tdev700.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0060ffdd71ac2fbad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "sg_vpc_tdev700",
            "name_prefix": "",
            "owner_id": "502863813996",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tdev700"
            },
            "tags_all": {
              "Project": "tdev700"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:internet-gateway/igw-077b7f9fc6bdd4477",
            "id": "igw-077b7f9fc6bdd4477",
            "owner_id": "502863813996",
            "tags": {
              "Name": "tdev700_igw",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700_igw",
              "Project": "tdev700"
            },
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:route-table/rtb-0e90825c3a61e52dc",
            "id": "rtb-0e90825c3a61e52dc",
            "owner_id": "502863813996",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tdev700_rtb_private",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700_rtb_private",
              "Project": "tdev700"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:route-table/rtb-0a42139f172c14439",
            "id": "rtb-0a42139f172c14439",
            "owner_id": "502863813996",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077b7f9fc6bdd4477",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077b7f9fc6bdd4477",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tdev700_rtb_public",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700_rtb_public",
              "Project": "tdev700"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f46c1426dee8a2f5",
            "route_table_id": "rtb-0e90825c3a61e52dc",
            "subnet_id": "subnet-09312119f7d100386"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b71669f6819ddc6",
            "route_table_id": "rtb-0e90825c3a61e52dc",
            "subnet_id": "subnet-0b36c2568c6730fdd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0760b7baef3a28c67",
            "route_table_id": "rtb-0e90825c3a61e52dc",
            "subnet_id": "subnet-03d31406a1cc95c9d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0681a3f9edf6b6918",
            "route_table_id": "rtb-0a42139f172c14439",
            "subnet_id": "subnet-0842beca7f92e2905"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06560bddc6b50e907",
            "route_table_id": "rtb-0a42139f172c14439",
            "subnet_id": "subnet-0b10baead6e902a37"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd6490835248127",
            "route_table_id": "rtb-0a42139f172c14439",
            "subnet_id": "subnet-062113502435c5016"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:subnet/subnet-09312119f7d100386",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.30.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09312119f7d100386",
            "ipv6_cidr_block": "2a05:d014:1926:1903::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-02114e8ac23e4eea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502863813996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdev700-subnet-private-eu-central-1a",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700-subnet-private-eu-central-1a",
              "Project": "tdev700"
            },
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:subnet/subnet-0b36c2568c6730fdd",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.30.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b36c2568c6730fdd",
            "ipv6_cidr_block": "2a05:d014:1926:1904::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0fde139013c81da00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502863813996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdev700-subnet-private-eu-central-1b",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700-subnet-private-eu-central-1b",
              "Project": "tdev700"
            },
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:subnet/subnet-03d31406a1cc95c9d",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.30.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d31406a1cc95c9d",
            "ipv6_cidr_block": "2a05:d014:1926:1905::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0539a223687a0d7b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502863813996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdev700-subnet-private-eu-central-1c",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700-subnet-private-eu-central-1c",
              "Project": "tdev700"
            },
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:subnet/subnet-0842beca7f92e2905",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.30.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0842beca7f92e2905",
            "ipv6_cidr_block": "2a05:d014:1926:1900::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-039c9e202262924de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502863813996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdev700-subnet-public-eu-central-1a",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700-subnet-public-eu-central-1a",
              "Project": "tdev700"
            },
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:subnet/subnet-0b10baead6e902a37",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b10baead6e902a37",
            "ipv6_cidr_block": "2a05:d014:1926:1901::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-06a8c598d54f13069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502863813996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdev700-subnet-public-eu-central-1b",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700-subnet-public-eu-central-1b",
              "Project": "tdev700"
            },
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:subnet/subnet-062113502435c5016",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062113502435c5016",
            "ipv6_cidr_block": "2a05:d014:1926:1902::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0674c15e24aabb587",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502863813996",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdev700-subnet-public-eu-central-1c",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700-subnet-public-eu-central-1c",
              "Project": "tdev700"
            },
            "vpc_id": "vpc-0a74a7c1f46d92c59"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:502863813996:vpc/vpc-0a74a7c1f46d92c59",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-024ecd6e3b294fb61",
            "default_route_table_id": "rtb-01aedd90bacfe3646",
            "default_security_group_id": "sg-0e1c741644f88196b",
            "dhcp_options_id": "dopt-0c2e7b103d3c21e5c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a74a7c1f46d92c59",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0112937e7b4914026",
            "ipv6_cidr_block": "2a05:d014:1926:1900::/56",
            "ipv6_cidr_block_network_border_group": "eu-central-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01aedd90bacfe3646",
            "owner_id": "502863813996",
            "tags": {
              "Name": "tdev700_vpc",
              "Project": "tdev700"
            },
            "tags_all": {
              "Name": "tdev700_vpc",
              "Project": "tdev700"
            }
          }
        }
      ]
    }
  ]
}